# legendofdarkness

./: .env  .gitignore  ASSETS.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.dev  README.md  Trunk.toml  api_log.txt  compose.yml  index.html
.github/insturctions/: base.md
migrations/: 20231220000000_initial_schema.sql  20231220000001_seed_data.sql  20231222000000_add_skills.sql  20231222010000_add_gender.sql  20231222040000_full_schema.sql  20231222050000_12_grades_items.sql  20231223000000_add_sprite_type.sql  20231223000001_update_skill_data.sql  20231223000002_full_i18n_keys.sql  20231223000003_monster_refactor.sql  20231223000400_add_monster_metadata.sql
public/: index.html  manifest.json
public/assets/: README.md
public/assets/characters/base/female/: anchors.json
public/assets/characters/base/male/: anchors.json
public/assets/characters/martial_artist/male/: anchors.json
public/assets/characters/warrior/male/: anchors.json
public/assets/i18n/: en.json  es.json  fr.json  ja.json  ko.json  zh.json
public/assets/sprites/anchors/: character_anchors_template.json
src/: app.rs  game_main.rs  lib.rs  main.rs  server_main.rs
src/client/: animation.rs  components.rs  equipment.rs  game.rs  mod.rs  resources.rs  states.rs  systems.rs  ui.rs
src/client/components/: character_window.rs  hud.rs  inventory_window.rs  skill_window.rs
src/client/game/: canvas.rs  mod.rs
src/client/game/systems/: combat.rs  map_renderer.rs  mod.rs  movement.rs  sprite_loader.rs
src/components/: inventory_window.rs  mod.rs  skill_window.rs
src/domain/: mod.rs
src/domain/character/: models.rs
src/domain/item/: models.rs
src/domain/shared/: models.rs
src/domain/skill/: components.rs  mod.rs  server.rs
src/game/: canvas.rs  mod.rs
src/game/systems/: mod.rs
src/models/: item.rs  map.rs  mod.rs  monster.rs  player.rs  skill.rs
src/server/: auth.rs  db.rs  handlers.rs  mod.rs  monsters.rs  skills.rs
src/shared/: constants.rs  mod.rs
src/shared/data/: assets.rs  characters.rs  items.rs  maps.rs  monsters.rs  skills.rs
src/shared/domain/: map.rs  mod.rs  monster.rs  player.rs
src/shared/domain/character/: mod.rs  models.rs
src/shared/domain/item/: models.rs
src/shared/domain/monster/: models.rs
src/shared/domain/shared/: models.rs
src/shared/domain/skill/: components.rs  mod.rs  models.rs  server.rs
src/shared/domain/sprite/: manifest.rs
style/: main.css
