[package]
name = "legend"
version = "0.1.0"
edition = "2024"

[lib]
name = "legend_client"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "legend-api"
path = "src/server_main.rs"

[[bin]]
name = "legend-game"
path = "src/game_main.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
log = "0.4"
thiserror = "2"

# Game (Shared)
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Bevy Game Engine (Client)
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
], optional = true }

# Server only
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
bcrypt = { version = "0.17", optional = true }
jsonwebtoken = { version = "9", optional = true }
once_cell = { version = "1", optional = true }

# WASM support (optional, for web builds)
getrandom = { version = "0.2", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["client"]
client = [
    "dep:bevy",
]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:bcrypt",
    "dep:jsonwebtoken",
    "dep:once_cell",
]
wasm = [
    "client",
    "dep:getrandom",
    "dep:console_error_panic_hook",
    "bevy/webgpu",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = "z"
